--- a/src/main/resources/assets/phoenixext/lang/en_us.json
+++ b/src/main/resources/assets/phoenixext/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "carpet.rule.instaMineDeepslate.desc": "Makes Deepslate instaminable with Haste 2, Efficiency V, Netherite pickaxe",
-  "carpet.rule.instaMineEndstone.desc": "Makes Endstone instaminable with Haste 2, Efficiency V, Netherite pickaxe"
+  "carpet.rule.instaMineEndstone.desc": "Makes Endstone instaminable with Haste 2, Efficiency V, Netherite pickaxe",
+  "carpet.rule.botSpawnSubscription.desc": "adds bot spawning subscription feature"
 }
